chore: rename project

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=fanduel-web-app
-sonar.projectName=FanDuel Web App
+sonar.projectKey=patronclash-web-app
+sonar.projectName=PatronClash Web App
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.tests=src
